--- a/client/src/components/farm-map/index.scss
+++ b/client/src/components/farm-map/index.scss
@@ -1,4 +1,5 @@
 .map-container {
+    margin-top: 5%;
     height: 85%;
     box-shadow: -1px 5px 19px -10px rgba(138,143,182,1);
     border-radius: 0.25rem;
