--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -6,6 +6,9 @@ html {
       height: 100%;
       main {
         height: 100%;
+        .contents {
+          height: 90%;
+        }
       }
     }
   }
