--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -3,6 +3,8 @@
 html {
   height: 100%;
   body {
+
+    font-family: 'Montserrat', 'Arial', sans-serif;
     height: 100%;
     #app {
       height: 100%;
