--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,9 +1,11 @@
 
+
+$trace-gray: #e0e0e0;
 // to use heights w/ percentages some top level things need to be explicitly set to 100
 html {
   height: 100%;
   body {
-
+    background-color: $trace-gray;
     font-family: 'Montserrat', 'Arial', sans-serif;
     height: 100%;
     #app {
@@ -12,6 +14,8 @@ html {
         height: 100%;
         .contents {
           height: 90%;
+          padding-left: 5%;
+          padding-right: 5%;
         }
       }
     }
